# Portfolio

./: README.md
Misc_Assembly_Assignments/: Copy_a_String_Backwards.asm  DOS_file_time.asm  Random_Screen_Location.asm  boolean_calculator.asm  color_matrix.asm  dword_string_convert.asm  fibonacci_numbers.asm  greatest_common_divisor.asm  multiple_byte_key_encryption.asm  non_recursive_factorial.asm  packed_bcd_to_ascii.asm  print_fibonacci_until_overflow.asm  twos_complement_shortcut.asm
Misc_Bash_And_Mini_Shell/: C-interp.sh  durm.sh  every.c  lsrm.sh  lss.sh  man_trash_scripts.txt  parallel.c  rename.sh  srm.sh  trash.sh  unrm.sh
Project_AVR_Hangman/: alphabet.h  avr.c  avr.h  en_dict.h  hangman.h  keypad.c  keypad.h  main.c  note_data.h  notes.h  songs.h
Project_AWS_MapQuest_Alarmclock/: dev_thing.ino  secrets.h
Project_AWS_MapQuest_Alarmclock/master/: master.ino
Project_AWS_MapQuest_Alarmclock/slave/: slave.ino
Project_Multithreaded_Search/: count_array.c  count_array.h  main.c
Project_NCurses_Paint_with_Networking/: myCursesNotes.txt
Project_NCurses_Paint_with_Networking/NonNetworkDraw/: curse.c  curse.h  draw  main.c  makefile
Projects_In_Algorithms/Benchmarking_tools/: helpers.h  main.cpp  old_main.cpp  sort_script.sh  test_generator.cpp
Projects_In_Algorithms/Project01/: hybrid_sort1.cpp  hybrid_sort2.cpp  hybrid_sort3.cpp  insertion_sort.cpp  merge_sort.cpp  shell_sort1.cpp  shell_sort2.cpp  shell_sort3.cpp  (+1 more)
Template_For_C++_Project/: makefile
Template_For_C++_Project/src/: CMakeLists.txt  foo.cpp  main.cpp  numberedFile.cpp
(+132 files in other folders)
